# crypto-trading-bot

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
bot/: exchange.py  main.py  portfolio.py  risk_manager.py  signals.py  strategy.py
deploy/: setup.sh  trading-bot.service
